trying to fix menu cropped at the bottom for the address bar with webkit

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,8 @@ svg {
     "main"
     "footer";
   grid-template-rows: 0.7fr 10fr 1.3fr;
-  height: 95vh;
+  height: 100vh;
+  min-height: -webkit-fill-available;
   background-image: url("./assets/imgs/bgFondo.png");
   background-size: cover;
   background-position: center;
